packages/tree-sitter-rgbds/grammar.js
    source_file: $ => seq(
      repeat($.line),
      optional($.final_line),  // Fix #11: file without trailing newline
    ),

    // Fix #4: support multiple statements per line with :: separator
    // Fix #11: final_line handles EOF without newline
    line: $ => seq(
      optional($.label_definition),
      optional($.statement),
      repeat(seq('::', $.statement)),
      optional($.comment),
      '\n',
    ),

    final_line: $ => choice(
      seq($.label_definition, optional($.statement), repeat(seq('::', $.statement)), optional($.comment)),
      seq($.statement, repeat(seq('::', $.statement)), optional($.comment)),
      $.comment,
    ),

    statement: $ => choice(
      $.instruction,
      $.directive,
      $.macro_invocation,
    ),

    // Fix #9: line continuation (allow trailing whitespace before newline)
    block_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),

    // ─── Labels ───────────────────────────────────────────────
    // Fix #5/#6: identifiers can contain dots for scoped labels
    // e.g. AnotherGlobal.with_another_local:

    label_definition: $ => choice(
      $.global_label,
      $.local_label,
      $.anonymous_label,
    ),

    global_label: $ => seq(
      field('name', choice($.identifier, $.scoped_identifier, $.macro_label, $.interpolation)),
      choice('::', ':'),
    ),

    // Labels/identifiers with macro arguments: \1Moves::, \1Special::, TM_\1, \2_tiles
    macro_label: _ => /\\([1-9#@]|<[0-9]+>)[a-zA-Z0-9_]*(\{[^}\r\n]*\}[a-zA-Z0-9_]*)*/,

    // Colon-less form (.name without :) is valid RGBDS syntax and heavily used
    // in real codebases (e.g. pokecrystal has hundreds of instances).
    // Precedence ensures colon forms are preferred when ambiguous.
    anonymous_label: _ => token(prec(-1, ':')),

    // ─── Instructions ─────────────────────────────────────────

    instruction: $ => seq(
      field('mnemonic', $.mnemonic),
      optional($.operand_list),
    ),

    mnemonic: _ => token(choice(...INSTRUCTIONS.map(i => ci(i)))),

    operand_list: $ => seq(
      $.operand,
      repeat(seq(',', $.operand)),
    ),

    operand: $ => choice(
      $.sp_offset,             // sp+n (must come first)
      $.sp_register,           // standalone sp
      $.negated_condition,     // Fix #2: !cc
      $.register,
      $.condition,
      $.memory_operand,
      $.expression,
    ),

    // Fix #3: sp_offset restricted to literal 'sp' only
    register: _ => token(choice(...REGISTERS.map(r => ci(r)))),

    // Fix #1: 'c' included in conditions
    condition: _ => token(choice(...CONDITIONS.map(c => ci(c)))),

    // Fix #2: negated conditions (!z, !nz, !c, !nc)
    directive: $ => choice(
      $.section_directive,
      $.data_directive,
      $.constant_directive,
      $.include_directive,
      $.incbin_directive,
      $.export_directive,
      $.purge_directive,
      $.charmap_directive,
      $.newcharmap_directive,
      $.setcharmap_directive,
      $.assert_directive,
      $.print_directive,
      $.warn_directive,
      $.fail_directive,
      $.opt_directive,
      // Block boundary markers (flat, no nesting)
      $.macro_start,
      $.endm_directive,
      $.if_directive,
      $.elif_directive,
      $.else_directive,
      $.endc_directive,
      $.rept_directive,
      $.for_directive,
      $.endr_directive,
      $.break_directive,
      $.shift_directive,
      $.endsection_directive,
      // Fix #7: UNION/NEXTU/ENDU as block markers (also SECTION modifier handled below)
      $.union_directive,
      $.nextu_directive,
      $.endu_directive,
      $.pushs_directive,
      $.pops_directive,
      $.pusho_directive,
      $.popo_directive,
      $.pushc_directive,
      $.popc_directive,
      // Fix #8: LOAD / ENDL
      $.load_directive,
      $.endl_directive,
      // RS counter directives
      $.rsreset_directive,
      $.rsset_directive,
      $.rb_directive,
      $.rw_directive,
      $.rl_directive,
    ),

    // ─── Section ──────────────────────────────────────────────
    // Fix #7: SECTION supports UNION and FRAGMENT modifiers

    data_directive: $ => seq(
      field('size', choice(ci_kw('DB'), ci_kw('DW'), ci_kw('DL'), ci_kw('DS'))),
      optional($.expression_list),
    ),

    // ─── Constants ────────────────────────────────────────────

    _def_name: $ => choice($.identifier, $.interpolation, $.macro_label),

    constant_directive: $ => choice(
      seq(ci_kw('DEF'), field('name', $._def_name), ci_kw('EQU'), $.expression),
      seq(ci_kw('DEF'), field('name', $._def_name), ci_kw('EQUS'), $.expression),
      seq(ci_kw('DEF'), field('name', $._def_name), choice('=', '+=', '-=', '*=', '/=', '%=', '|=', '&=', '^=', '<<=', '>>=', ci_kw('SET')), $.expression),
      seq(ci_kw('DEF'), field('name', $._def_name), choice(ci_kw('RB'), ci_kw('RW'), ci_kw('RL')), optional($.expression)),
      seq(ci_kw('REDEF'), field('name', $._def_name), ci_kw('EQUS'), $.expression),
      seq(ci_kw('REDEF'), field('name', $._def_name), ci_kw('EQU'), $.expression),
      seq(ci_kw('REDEF'), field('name', $._def_name), choice('=', '+=', '-=', '*=', '/=', '%=', '|=', '&=', '^=', '<<=', '>>=', ci_kw('SET')), $.expression),
      // Legacy (no DEF prefix)
      seq(field('name', $.identifier), ci_kw('EQU'), $.expression),
      seq(field('name', $.identifier), ci_kw('EQUS'), $.expression),
      seq(field('name', $.identifier), choice('=', ci_kw('SET')), $.expression),
      seq(field('name', $.identifier), choice(ci_kw('RB'), ci_kw('RW'), ci_kw('RL')), optional($.expression)),
    ),

    // ─── Include / Incbin ─────────────────────────────────────

    incbin_directive: $ => seq(
      ci_kw('INCBIN'),
      $.string,
      optional(seq(',', $.expression, optional(seq(',', $.expression)))),
    ),

    // ─── Export / Purge ───────────────────────────────────────

    export_directive: $ => seq(
      choice(ci_kw('EXPORT'), ci_kw('GLOBAL')),
      choice($.identifier, $.macro_label, $.macro_arg),
      repeat(seq(',', choice($.identifier, $.macro_label, $.macro_arg))),
    ),

    macro_start: $ => seq(
      choice(token(prec(1, seq(ci('MACRO'), '?'))), ci_kw('MACRO')),
      field('name', $.identifier),
    ),

    endm_directive: _ => ci_kw('ENDM'),

    // Lowest precedence fallback: any identifier that didn't match a directive
    // or instruction is treated as a macro invocation. This is inherently broad
    // but matches RGBDS behavior where any identifier can be a user-defined macro.
    macro_invocation: $ => prec(-2, seq(
      field('name', $.identifier),
      optional($.expression_list),
    )),

    rept_directive: $ => seq(
      choice(token(prec(1, seq(ci('REPT'), '?'))), ci_kw('REPT')),
      $.expression,
    ),

    // FOR variable, start, stop[, step] OR FOR variable, count
    // FOR? is the conditional form
    for_directive: $ => seq(
      choice(token(prec(1, seq(ci('FOR'), '?'))), ci_kw('FOR')),
      field('variable', $.identifier),
      ',',
      $.expression,
      repeat(seq(',', $.expression)),
    ),

    endr_directive: _ => ci_kw('ENDR'),
    charmap_directive: $ => seq(ci_kw('CHARMAP'), $.expression, ',', $.expression_list),

    assert_directive: $ => seq(
      choice(ci_kw('ASSERT'), ci_kw('STATIC_ASSERT')),
      $.expression,
      optional(seq(',', $.expression)),
    ),

    print_directive: $ => seq(
      choice(ci_kw('PRINT'), ci_kw('PRINTLN')),
      optional($.expression_list),
    ),

    warn_directive: $ => seq(ci_kw('WARN'), $.string),
    opt_directive: $ => seq(ci_kw('OPT'), /[^\r\n;]+/),

    expression_list: $ => seq(
      $.expression,
      repeat(seq(',', $.expression)),
      optional(','),
    ),

    expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.function_call,
      $.interpolation,       // {symbol} curly-brace expansion
      $.equs_expansion,      // number/expr followed by EQUS identifier (e.g. 2 percent)
      $.number,
      $.string,
      $.char_literal,
      $.gfx_literal,         // Fix #10: backtick graphics literal
      $.symbol_reference,
      $.macro_arg,
    ),

    // BEST-EFFORT HEURISTIC for EQUS text expansion.
    //
    // RGBDS EQUS macros expand as raw text before parsing, creating token
    // sequences the grammar cannot predict. For example:
    //   DEF percent EQUS "* $ff / 100"   →  "2 percent" becomes "2 * $ff / 100"
    //   DEF tile EQUS "* $10"            →  "vTiles2 tile $31" becomes "vTiles2 * $10 $31"
    //
    // This rule recognizes common unexpanded patterns so the parser doesn't
    // produce ERROR nodes for valid RGBDS code. It is intentionally broad
    // and low-precedence. The LSP should not rely on the structure of
    // equs_expansion nodes — they are parse-recovery, not semantic.
    //
    // Three forms, from most to least specific:
    equs_expansion: $ => prec.left(-1, choice(
      // Form 1: literal + EQUS identifier: "2 percent", "\2 tiles", "(7*7) tiles"
      seq(
        choice($.number, $.macro_arg, $.parenthesized_expression, $.macro_label),
        $.identifier,
        repeat(choice($.number, $.identifier, $.macro_arg, $.char_literal, $.parenthesized_expression)),
      ),
      // Form 2: EQUS identifier + literal: "time_group 10", "tile '0'", "palred 31"
      seq(
        $.identifier,
        choice($.number, $.char_literal),
        repeat(choice($.number, $.identifier, $.macro_arg, $.char_literal)),
      ),
      // Form 3: identifier chain with args: "vTiles2 tile $31", "palred 31 + palgreen 20"
      // This is the broadest form and may over-accept in rare cases.
      seq(
        $.identifier,
        $.identifier,
        repeat1(choice($.number, $.identifier, $.macro_arg, $.char_literal, $.parenthesized_expression)),
      ),
    )),

    // Symbol interpolation: {identifier}, {format:identifier}, {{nested}}
    // Limitation: single-level regex, won't handle deeply nested {d:{expr}}.
    // Would require an external scanner for full support — not worth the
    // complexity given how rare deep nesting is in practice.
    binary_expression: $ => {
      /** @type {[string, number][]} */
      const ops = [
        ['||', 1],
        ['&&', 2],
        ['===', 3], ['!==', 3], ['==', 3], ['!=', 3], ['<', 3], ['>', 3], ['<=', 3], ['>=', 3],
        ['++', 4], ['+', 4], ['-', 4],
        ['|', 5],
        ['^', 6],
        ['&', 7],
        ['<<', 8], ['>>', 8],
        ['*', 9], ['/', 9], ['%', 9],
        ['**', 10],
      ];
      return choice(
        ...ops.map(([op, p]) =>
          prec.left(p, seq(field('left', $.expression), op, field('right', $.expression)))
        ),
      );
    },

    parenthesized_expression: $ => seq('(', $.expression, ')'),

    // Function calls: identifier followed by ( args )
    // Builtin functions (HIGH, LOW, BANK, etc.) are just identifiers syntactically
    function_call: $ => seq(
      field('function', $.identifier),
      '(',
      optional($.expression_list),
      ')',
    ),

    symbol_reference: $ => choice(
      $.identifier,
      $.scoped_identifier,   // Fix #6: Global.local as reference
      $.local_identifier,
      $.macro_label,         // \1_Symbol references
      $.equs_string_ref,    // #identifier — EQUS string expansion
      '@',                   // current PC address
      /:[+-]+/,              // anonymous label refs
    ),

    // #identifier expands an EQUS symbol as a string value
    // Can contain {interpolation} and \1-\9 macro args
    equs_string_ref: _ => choice(
      /#[a-zA-Z_][a-zA-Z0-9_]*((\{[^}\r\n]*\}|\\[1-9@])[a-zA-Z0-9_]*)*/,
      /#\{[^}\r\n]*\}/,       // #{interpolation}
    ),

    // ─── Tokens ───────────────────────────────────────────────

    // RGBDS identifiers: start with [a-zA-Z_], contain # @ in body,
    // can have \@ suffix and {expression} interpolation anywhere
    // Note: $ is NOT valid — it's the hex prefix
    // Note: @ alone is the PC address symbol, not an identifier
    // Identifiers may contain \1-\9 macro args and {expr} interpolation inline
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_#@]*((\{[^}\r\n]*\}|\\[1-9@])[a-zA-Z0-9_#@]*)*(\\@)?/,

    // Scoped identifier with exactly one dot (Global.local).
    // RGBDS spec: "Label names cannot contain more than one period."
    scoped_identifier: _ => /[a-zA-Z_][a-zA-Z0-9_#@]*(\{[^}\r\n]*\}[a-zA-Z0-9_#@]*)*\.[a-zA-Z_][a-zA-Z0-9_#@]*(\{[^}\r\n]*\}[a-zA-Z0-9_#@]*)*(\\@)?/,

    // Local labels can also have \@ suffix, {expr} interpolation, and \1-\9 args
    number: _ => choice(
      /\$[0-9a-fA-F_]+/,           // hex: $FF, $FF_00
      /0[xX][0-9a-fA-F_]+/,        // hex: 0xFF
      /#[0-9a-fA-F_]+/,            // hex color: #F8F8A8
      /%[01_]+/,                    // binary: %1010, %00_11_0000
      /%[.a-zA-Z0-9_]+/,           // EQUS-expanded binary: %..XXXX.. (custom chars via opt)
      /0[bB][01_]+/,               // binary: 0b1010
      /&[0-7_]+/,                   // octal: &77
      /0[oO][0-7_]+/,              // octal: 0o77
      /[0-9]+\.[0-9]+[qQ][0-9]+/,  // fixed-point with precision: 12.34q8
      /[0-9]+\.[0-9]+/,            // fixed-point: 12.34
      /[0-9][0-9_]*/,              // decimal: 100, 1_000
    ),

    // Char literals: 'x', '<CHARMAP_NAME>', '\r', '\n', '\'s', unicode chars
    gfx_literal: _ => /`[^\s,;\r\n]+/,

    // Strings: double-quoted and triple-quoted
    string: _ => choice(
      // Triple-quoted strings (can span lines, contain quotes)
      token(seq('"""', /([^"]|"[^"]|""[^"])*/, '"""')),
      // Double-quoted strings with escapes and interpolation
      seq('"', repeat(choice(/[^"\\\r\n{]/, /\\./, /\{[^}\r\n]*\}/)), '"'),
    ),
  },
});

/**
 * Case-insensitive regex for a keyword.
 * @param {string} keyword
 * @returns {RegExp}
 */
function ci(keyword) {
  return new RegExp(
    keyword.split('').map(c =>
      /[a-zA-Z]/.test(c) ? `[${c.toLowerCase()}${c.toUpperCase()}]` : c
    ).join('')
  );
}

/**
 * Case-insensitive keyword token (higher precedence to beat identifier).
 * @param {string} keyword
 * @returns {RuleOrLiteral}
 */
function ci_kw(keyword) {
  return token(prec(1, ci(keyword)));
}
