packages/tree-sitter-rgbds/test/corpus/pokecrystal.txt
================================================================================
DB without arguments (RAM variable)
================================================================================

wMyVar:: db

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (identifier)))
    (statement
      (directive
        (data_directive)))))

================================================================================
DW without arguments
================================================================================

wPointer:: dw

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (identifier)))
    (statement
      (directive
        (data_directive)))))

================================================================================
Conditional macro definition MACRO?
================================================================================

MACRO? flag_array
ENDM

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (macro_start
          (identifier)))))
  (line
    (statement
      (directive
        (endm_directive)))))

================================================================================
DEF with compound assignment
================================================================================

DEF counter += 1

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (constant_directive
          (identifier)
          (expression
            (number)))))))

================================================================================
Macro label with backslash arg
================================================================================

\1Moves:: ds 4

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (macro_label)))
    (statement
      (directive
        (data_directive
          (expression_list
            (expression
              (number))))))))

================================================================================
Numeric macro arg with angle brackets
================================================================================

    db \<10>, 0

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (data_directive
          (expression_list
            (expression
              (symbol_reference
                (macro_label)))
            (expression
              (number))))))))

================================================================================
EQUS string ref with hash
================================================================================

STRLEN(#MY_STRING)

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (macro_invocation
        (identifier)
        (expression_list
          (expression
            (parenthesized_expression
              (expression
                (symbol_reference
                  (equs_string_ref))))))))))

================================================================================
Number EQUS expansion (percent pattern)
================================================================================

    db 2 percent

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (data_directive
          (expression_list
            (expression
              (equs_expansion
                (number)
                (identifier)))))))))

================================================================================
Function call with identifier
================================================================================

    ld a, LOW(wMyVar)

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (register))
          (operand
            (expression
              (function_call
                (identifier)
                (expression_list
                  (expression
                    (symbol_reference
                      (identifier))))))))))))

================================================================================
FOR with two arguments
================================================================================

FOR n, 8
ENDR

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (for_directive
          (identifier)
          (expression
            (number))))))
  (line
    (statement
      (directive
        (endr_directive)))))
